--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,13 @@ ENV/
 env.bak/
 venv.bak/
 
+### Code ###
+.vscode/*
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
+
 # Spyder project settings
 .spyderproject
 .spyproject
